# TES-Taiwan-Electric-Scooter-Charging-Controller

./: .gitignore  BOM.md  LICENSE.md  README.md  TES_ESP32.ino  Wiring Guide.md  Wiring_Guide.md  partitions_16MB.csv  platformio.ini
boards/: custom_esp32s3_n16r8.json  esp32s3_n32r16v.json
data/: fs_version.txt  index.html  wifi_setup.html
docs/: BOM_V2
docs/PCB/: TES_Controller_V1.1.eprj  TES_Controller_V1.2.eprj  TES_Controller_V1.eprj  TES_Controller_V1_Case_Base.ipt  TES_Controller_V1_Case_Button.ipt  TES_Controller_V1_Case_Top.ipt  TES_Controller_V1_Case_Top.stl
docs/Release_V1.2.3/: BOM.md  Wiring_Guide.md
docs/Release_V1.3.3/: BOM.md  Wiring_Guide.md
docs/TES EVSE by Turtle Power/: 15A充電器免責聲明.docx
docs/TES SECC by Chris Huang/: 使用說明.docx  使用說明書.docx  免責聲明.docx  原理說明.docx
src/: Charger_Defs.h  Version.h  config.h  main.cpp
src/BLE_Comms/: BLE_Comms.cpp  BLE_Comms.h
src/CAN_Protocol/: CAN_Protocol.cpp  CAN_Protocol.h
src/ChargerLogic/: ChargerLogic.cpp  ChargerLogic.h
src/HAL/: HAL.cpp  HAL.h
src/LuxBeacon/: LuxBeacon.cpp  LuxBeacon.h
src/NetworkServices/: NetworkServices.cpp  NetworkServices.h
src/OTAManager/: OTAManager.cpp  OTAManager.h
src/PowerSupplyController/: PowerSupplyController.cpp  PowerSupplyController.h
src/UI/: UI.cpp  UI.h
tes_charger_firmware/: .gitmodules  CMakeLists.txt  partitions.csv
tes_charger_firmware/components/quickjs/: CMakeLists.txt  quickjs-libc.c  quickjs.c
tes_charger_firmware/data/: index.html  main.js
tes_charger_software/: package-lock.json  package.json  tsconfig.json
(+35 files in other folders)
